# signalforge

./: .gitignore  README.md  pyproject.toml
docs/: architecture.md  artifact-schemas.md  command-contracts.md  command-surface.md  decision-evaluation.md  decision-graph.md  evidence-freshness.md  portfolio-review.md  publish-pack.md  workspace-model.md
examples/: publish-pack.example.yaml  sources.example.yaml
examples/demo/.signalforge/: workspace.json
examples/demo/artifacts/decisions/: decision_build_agent-native-strategic-operating-layer.json  decision_build_agent-native-strategic-operating-layer.md
examples/demo/artifacts/opportunities/: opp_agent-native-strategic-operating-layer.json  opp_agent-native-strategic-operating-layer.md
examples/demo/artifacts/portfolio/: portfolio_map_demo.json  portfolio_map_demo.md
examples/demo/artifacts/sources/: src_repo_gstack.json  src_repo_gstack.md  src_repo_paperclip.json  (+1 more)
src/signalforge/: __init__.py  analysis.py  artifacts.py  cli.py  models.py  persistence.py  unified.py  workspace.py
src/signalforge/adversarial/: __init__.py  bias_tracker.py  config.py  engine.py  kill_criteria.py  red_team.py
src/signalforge/cli/: __init__.py  main.py
src/signalforge/convergence/: __init__.py  config.py  overlap.py  radar.py
src/signalforge/drift/: __init__.py  analyzer.py  classifier.py  config.py  timeseries.py
src/signalforge/semantic/: __init__.py  config.py  enricher.py  evidence.py  prompts.py  provider.py
tests/: test_adversarial.py  test_convergence.py  test_drift.py  test_semantic.py  test_smoke.py
(+2 files in other folders)
