[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "signalforge"
version = "0.1.0"
description = "Artifact-first product direction engine for builders"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "SignalForge" }
]
dependencies = [
  "typer>=0.12",
  "pydantic>=2.7",
  "rich>=13.7",
  "PyYAML>=6.0",
]

[project.scripts]
forge = "signalforge.cli.main:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
